@@ -96,16 +96,14 @@ public class ManageController {
         model.addAttribute("statusFilter", statusFilter);
         model.addAttribute("workflow", workflow);
         Page<SignBook> signBooks = signBookService.getSignBooksForManagers(userEppn, authUserEppn, statusFilter, recipientsFilter, workflow.getDescription(), docTitleFilter, creatorFilter, dateFilter, pageable);
+        List<SignBook> allSignBooks = signBookService.getSignBooksForManagers(userEppn, authUserEppn, statusFilter, recipientsFilter, workflow.getDescription(), docTitleFilter, creatorFilter, dateFilter, Pageable.unpaged()).getContent();
         model.addAttribute("signBooks", signBooks);
-        LinkedHashSet<String> docTitles = new LinkedHashSet<>();
-        if(statusFilter.isEmpty() && docTitleFilter == null && recipientsFilter == null) {
-            docTitles.addAll(signBookService.getAllDocTitles(userEppn));
-        } else {
-            docTitles.addAll(signBooks.stream().map(SignBook::getSubject).toList());
-        }
-        model.addAttribute("docTitles", docTitles);
-        model.addAttribute("creators", signBooks.stream().map(SignBook::getCreateBy).distinct().collect(Collectors.toList()));
-        model.addAttribute("signRequestRecipients", signBookService.getRecipientsNames(userEppn).stream().filter(Objects::nonNull).collect(Collectors.toList()));
+        model.addAttribute("docTitles", allSignBooks.stream().map(SignBook::getSubject).distinct().toList());
+        model.addAttribute("creators", allSignBooks.stream().map(SignBook::getCreateBy).distinct().collect(Collectors.toList()));
+        List<SignRequest> signRequests = allSignBooks.stream().map(SignBook::getSignRequests).flatMap(Collection::stream).toList();
+        List<Map<Recipient, Action>> recipientHasSigned = signRequests.stream().map(SignRequest::getRecipientHasSigned).toList();
+        List<Recipient> recipients = recipientHasSigned.stream().map(Map::keySet).flatMap(Collection::stream).toList();
+        model.addAttribute("signRequestRecipients", recipients.stream().map(Recipient::getUser).distinct().toList());
         return "user/manage/details";
     }
 
